# mcp-risk-index

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
data/: catalog.yml
docs/: catalog-governance.md  homebrew.md  mcp-audit-adoption-review.md  product-foundation.md  publishing.md  risk-context-note.md
docs/superpowers/specs/: 2026-06-13-catalog-design.md
ops/: opt-overlay.md
ops/constraints/: main-entry.md  production.md
ops/skills/: evolution.md
src/mcp_risk_index/: __init__.py  catalog.py  cli.py  renderers.py  schema.py
src/mcp_risk_index/catalogs/: starter.yml
tests/: test_catalog.py  test_docs.py
tests/fixtures/: invalid-absolute-claim.yml  invalid-missing-evidence.yml  invalid-unknown-signal.yml
tests/fixtures/snapshots/: catalog.md
